k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-project
spec:
  selector:
    app: backend # Belongs to the backend
  ports:
    - protocol: TCP
      port: 80 # The Port he listening
      targetPort: 5000 # The port he forwarding
  type: ClusterIP # The Type of Service we will have
